# MyProjects

./: .gitignore
Python/: array_task.py  sort.py
Python/APItask/: APItask.py  default.html  index.html  pxWorker.py
Python/httpServer/: cfg_install.py  httpServer.py  requirements.txt
Python/sort_ex/: sort.py
Python/testAIServer/: server.py
Python/threadPool/: knapsack.py  threadPool.py
c:c++/AutoPilot/: CMakeLists.txt  CMakeLists.txt.user.3.0-pre1  main.cpp
c:c++/AutoPilot/AutoControlSystems/: autocontrolsystem.cpp  autocontrolsystem.h  headingangleautocontrolsystem.cpp  headingangleautocontrolsystem.h  heightautocontrolsystem.cpp  heightautocontrolsystem.h
c:c++/AutoPilot/AutoPilotSystems/: autopilotsystem.cpp  autopilotsystem.h
c:c++/AutoPilot/ControlSystems/: controlsystem.cpp  controlsystem.h  headinganglecontrolsystem.cpp  headinganglecontrolsystem.h  heightcontrolsystem.cpp  heightcontrolsystem.h
c:c++/AutoPilot/MeterSystems/: headinganglemetersystem.h  heightmetersystem.h  metersystem.cpp
c:c++/VoxelWork/: Camera.cpp  Camera.h  Noise.cpp  Noise.h  Vector3D.h  Voxel.cpp  Voxel.h  VoxelWork.pro  allHeaders.h  main.cpp  mainwindow.cpp  mainwindow.h  octTree.cpp  octTree.h  specialFunctions.cpp  specialFunctions.h
haskell/: array_exp.hs  fixtest.hs  quicksort.hs
haskell/acm.timus.ru/: 1068.hs  1409  1409.hi  1409.hs  stoneHeaps  stoneHeaps.hi  stoneHeaps.hs  stones.hs  (+3 more)
html/: life_3.1.html  matrix.html  Текстовый документ.txt  Хаффман не правильный.html  Хаффман правильный.html  почти Хаффман.html
perl/: whWidget.pl
prolog/: num2str.pl
(+108 files in other folders)
