project(AutoPilot)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(. SRC_LIST)
aux_source_directory(./ControlSystems SRC_LIST)
aux_source_directory(./AutoControlSystems SRC_LIST)
aux_source_directory(./MeterSystems SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
include_directories(. ./ControlSystems ./AutoControlSystems ./MeterSystems)
